# data-science-project

./: pyproject.toml
notebooks/data_processing/: 03_basic_NLP.ipynb
notebooks/data_retrieval/: 01_APIs.ipynb
notebooks/data_retrieval/.ipynb_checkpoints/: .env  01_APIs-checkpoint.ipynb  02_Scraping-checkpoint.ipynb
notebooks/exercises/: conditionals_exercise.ipynb  dictionaries_exercise.ipynb  file_io_exercise.ipynb  for_loops_exercise.ipynb  lists_exercise.ipynb  numbers_exercise.ipynb  pandas_intro_exercise.ipynb
