[tool.poetry]
name = "data-science-project"
version = "0.1.0"
description = ""
authors = ["Martin Petri Bagger <mpb@danskecommodities.com>"]
readme = "README.md"
packages = [{include = "data_science_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
nltk = "^3.8.1"
requests = "^2.31.0"
numpy = "^1.26.4"
pytz = "^2024.1"
tzdata = "^2024.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
